--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,12 @@
     font-family:  'Krub', sans-serif;
 }
 
+/* Body */
+
+html{
+    font-size: 20px;
+}
+
 body {
     background-color: rgb(241, 241, 241);
     color: #141414; 
@@ -14,44 +20,41 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    padding: 0px;
     height: 100vh;
 
 }
 
+
+/* Container Principal */
+
+
 .container-principal {
-    flex-basis: 50%;
+    width: 100%;
+
     height: 100%;
     background-color: #0e0e0e;
     color: #fafafa;
     border: 0px solid #ffffff99;
     padding-top: 20px;
-    padding-bottom: 180px;
-    overflow: hidden;
+    padding-bottom:     180px;
+    position: relative;
+    z-index: 1;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
-.container-secundario {
-    flex-basis: 50%;    
-    height: 100%;
-    background-color: #000000d8;
-    color: #ffffff;
-    border: 0px solid #ffffff99;
-    padding: 20px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 .container-title {
     width: 100%;
-    margin-bottom: 30px;
 }
 
 .container-title h2 {
@@ -71,11 +74,13 @@ body {
 
 form {
     background-color: #161616;
-    width: 50%;
+    width: 40%;
+    margin-top: 30px;
     padding: 20px;
     border: 1px solid #1b1b1b;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
 .label {
@@ -83,6 +88,7 @@ form {
     text-align: start;
     margin-bottom: 10px;
     font-weight: 800;
+    font-size: 1.1rem;
 
 }
 
@@ -91,41 +97,36 @@ form {
     resize: none;
     overflow: auto;    
     padding: 10px;
+    font-size: .8rem;
     font-weight: 500;
     margin-bottom: 20px;
     border: 1px solid #1b1b1b;
     border-radius: 12px;
     min-width: 40px;
+    transition-duration: 100ms;
 }
-
 
 .input:focus {
     outline: 1px solid rgb(62, 255, 44);
 }
 
 #valor {
-    width: 90%;
-    border-end-end-radius: 0px;
-    border-start-end-radius: 0px;
+    width: 100%;
 }
 
-.fa-dollar-sign {
-    width: 10%;
-    height: 37px;
-    border: none;
-    transform: translateY(1px) translateX(-2px);
-    border-end-end-radius: 12px;
-    border-start-end-radius: 12px;
-    padding-top: 10px;
-
-    background-color: #f1f1f1;
-    color: #141414;
+.sub-label{
+    text-align: start;
+    margin-top: -13px;
+    margin-bottom: 13px;
+    margin-left: 8px;
+    font-weight: 400;
 }
 
 #categoria:active {
     border-end-end-radius: 0px;
     border-end-start-radius: 0px;
 }
+
 #button {
     padding: 10px 20px;
     border: none;
@@ -133,6 +134,9 @@ form {
     cursor: pointer;
     background-color: #1b1b1b; 
     color: #fafafa;
+    font-size: .9rem;
+    text-transform: uppercase;
+    font-weight: 300;
 }
 
 #button:hover {
@@ -140,6 +144,245 @@ form {
     color: #fafafa;
 }
 
+
+#arrowRight{
+    position: absolute;
+    left:50px;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 1.4rem;
+    cursor: pointer;
+    color: rgb(62, 255, 44);
+    background-color: #161616;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#arrowRight:hover{
+    background-color: #1d1d1d;
+
+}
+
+#arrowUp{
+    display: none;
+}
+
+/* Container Secundario */
+
+.container-secundario {
+    width: 0px;
+    height: 100%;
+    position: absolute;
+    left: -600px;
+    background-color: #000000d8;
+    color: #ffffff;
+    border: 0px solid #ffffff99;
+    padding: 20px;
+    transition-duration: .4s;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    z-index: 3;
+
+}
+
 #container-secundario-h4-responsive{
     display: none;
+}
+
+.container-gastos{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.gasto {
+    background-color: #fafafa;
+    color: #141414;
+
+    width: 100%;
+    height: 50px;
+
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+    border-radius: 10px;
+
+    margin-top: 30px;
+    position: relative;
+    padding: 10px;
+}
+
+.gasto h3{
+    display: inline;
+    max-width: 40%;
+    overflow: hidden;
+    font-family: 'Krub';
+    font-size: .76rem;
+    font-weight: 500;
+    margin-left: 10px;
+}
+
+.gasto-precio span {
+    font-weight: bold;
+}
+
+.gasto-descripcion{
+    max-height: 40px;
+}
+
+.fa-pencil{
+    position: absolute;
+    top: -10px;
+    right: -10px;
+
+
+    transition-duration: .1s;
+    padding:8px;
+    font-size: .7rem;
+    border-radius: 40%;
+    color: rgb(62, 255, 44);
+    background-color: #000000;
+    cursor: pointer;
+}
+
+.fa-xmark{
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    transition-duration: .1s;
+
+
+    padding: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
+    font-size: 1rem;
+    border-radius: 40%;
+    color: rgb(62, 255, 44);
+    background-color: #000000;
+    cursor: pointer;
+}
+
+.fa-xmark:hover, .fa-pencil:hover{
+    color: rgb(62, 255, 44);
+    background-color: #292929;
+}
+
+#total {
+    position: absolute;
+    bottom: 40px;
+    font-size: 1.1rem;
+}
+
+#total i{
+    font-size: 1rem;
+}
+
+
+.arrow {
+    background-color: #161616;
+
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 1.4rem;
+    cursor: pointer;
+    color: rgb(62, 255, 44);
+}
+
+.arrow:focus{
+    background-color: transparent;
+}
+
+#arrowLeft{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: -10px;
+}
+
+#arrowLeft:hover{
+    background-color: #1d1d1d;
+
+}
+
+#arrowDown{
+    display: none;
+}
+
+
+
+@media (max-width: 1200px) {
+
+    html {
+        font-size: 15px;
+    }
+    
+    form {
+        width: 60%;
+    }
+}
+
+@media (max-width: 900px) {
+    
+    form {
+        width: 80%;
+    }
+
+    #arrowRight, #arrowLeft {
+        display: none;
+    }
+
+    #arrowDown, #arrowUp{
+        display: inline;
+    }
+
+    #arrowUp{
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 20px;
+    }
+
+    #total {
+        bottom: 90px;
+    }
+
+    #arrowDown {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 30px;
+    }
+
+    .container-secundario {
+        right: 0;
+        bottom: 0px;
+        z-index: 3;
+    
+    }
+}
+
+@media (max-width: 600px) {
+    form {
+        width: 90%;
+    }
+
+
+}
+
+@media (max-width: 560px) {
+    .container-secundario {
+        left: 0px;
+        bottom: -1000px;
+        z-index: 3;
+    
+    }
 }
