--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -75,7 +75,7 @@ body {
 form {
     background-color: #161616;
     width: 40%;
-    margin-top: 30px;
+    margin-top: 1.5rem;
     padding: 20px;
     border: 1px solid #1b1b1b;
     border-radius: 10px;
@@ -94,6 +94,7 @@ form {
 
 .input {
     width: 100%;
+    height: 2rem;
     resize: none;
     overflow: auto;    
     padding: 10px;
@@ -112,6 +113,10 @@ form {
 
 #valor {
     width: 100%;
+}
+
+#categoria {
+    height: 3rem;
 }
 
 .sub-label{
@@ -331,7 +336,10 @@ form {
 }
 
 @media (max-width: 900px) {
-    
+    html {
+        font-size: 12px;
+    }
+
     form {
         width: 80%;
     }
@@ -346,8 +354,7 @@ form {
 
     #arrowUp{
         position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
+        left: 70%;
         bottom: 20px;
     }
 
@@ -379,6 +386,9 @@ form {
 }
 
 @media (max-width: 560px) {
+    html {
+        font-size: 8px;
+    }
     .container-secundario {
         left: 0px;
         bottom: -1000px;
