--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -115,7 +115,7 @@ form {
     width: 100%;
 }
 
-#categoria {
+#category {
     height: 3rem;
 }
 
@@ -127,7 +127,7 @@ form {
     font-weight: 400;
 }
 
-#categoria:active {
+#category:active {
     border-end-end-radius: 0px;
     border-end-start-radius: 0px;
 }
@@ -253,12 +253,24 @@ form {
     margin-left: 10px;
 }
 
-.gasto-precio span {
+.gasto-price span {
     font-weight: bold;
 }
 
 .gasto-descripcion{
     max-height: 40px;
+}
+
+.gasto-date {
+    position: absolute;
+    left: -20px;
+    top: -25px;
+    font-size: 1.2rem;
+    font-weight: 900;
+    padding: 10px;
+    background-color: #141414;
+    color: #fafafa;
+    border-radius: 10px;
 }
 
 .fa-pencil{
